--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm ci
-
+      - name: run pulumi backend
+        run: npm run dev
+      - name: test api
+        run: "curl -X GET 'http://localhost:5000/deploy-dev-unit' -H 'accept: application/json'"
