--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: run pulumi backend
-        run: npm run dev
+        run: |
+          npm run dev > /dev/null 2>&1 &
+          sleep 5m &
       - name: test api
         run: "curl -X GET 'http://localhost:5000/deploy-dev-unit' -H 'accept: application/json'"
